data/derived/comb/progs/unify/prog0433.ml.out
Characters 253-254:
  emitGrayscale (f,n,name);;
                 ^
Error: This expression has type float * float -> unit
       but an expression was expected of type float * float -> float
       Type unit is not compatible with type float 
